welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var Nbbiscuitpasse:Int=0
while (!sortiTrouvee())
do {
	avance();
	if (estSurBiscuit()) {
		Nbbiscuitpasse=Nbbiscuitpasse+1
	}
} while (!croisement)
